# wincent_challenge

./: .gitignore  README.md  example_3.txt  main.py  pyproject.toml
